...

  private var canEnableScores: Bool {
    selectedPlayer && scoreAvailable && !invalidScoreFilteringEnabled
  }

  var body: some View {
    FestivalModal("Filter Songs", closeIdentifier: "fst.songs.filter.done") {
      VStack(spacing: 0) {
        Form {
          generalSections
          if selectedPlayer {
            Section {
              Button {
...
